<resources>
    <string name="clientID">718613752763-v72826m9hjgvqoe85cemoha1shsetmka.apps.googleusercontent.com</string>
    <string name="dialog_start">User already exits. please log in to continue.</string>
    <string name="OpenDrawer">Open navigation drawer</string>
    <string name="CloseDrawer">Close navigation drawer</string>
    <string name="visibility">Visibility:</string>
    <string name="board_background">Board background</string>
    <string name="create_board">Create Board</string>
    <string name="todo">TODO</string>
    <string name="hello">Hello</string>
    <string name="card_title">Card Title</string>
    <string name="title">Title</string>
    <string name="add_card">+ add card</string>
    <string name="enter_card_name">Enter Card Name</string>
    <string name="en">Enter card name</string>
    <string name="done">Done</string>
    <string name="enter_list_name">Enter list Name</string>
    <string name="add_lists">Add list</string>


    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Projemanag’s Minimalist Interface.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="sign_in_description_text">Enter your name, email id and password, to register with us.</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>

    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>

    <string name="no_boards_are_available">No Boards are available!!!</string>

    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>

    <string name="members">Members</string>

    <string name="add_member">Add Member</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="search_member">Search Member</string>

    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>

    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="delete_card">Delete Card</string>

    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="str_select_label_color">Select Label Color</string>

    <string name="str_select_member">Select Member</string>
    <string name="app_name">AproManager</string>
    <string name="default_notification_channel_id">appro_manager_notifications</string>
    <string name="default_notification_channel_name">Appro Manager Notifications</string>
    <string name="default_notification_channel_description">Channel for notifications from Appro Manager app</string>
    <string name="write_a_comment">Write a comment…</string>
    <string name="user_name">User name</string>
    <string name="comments">comments</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="_0">0</string>
    <string name="select_board">select boards</string>
    <string name="select_position">select position</string>
    <string name="timestamp">timeStamp</string>
    <string name="comments_sections">Comments Section</string>


    <string-array name="visibility_options">
        <item>Workspace</item>
        <item>Public</item>
        <item>Private</item>
    </string-array>
    <string name="title_activity_move_card">moveCard</string>
    <string name="select_list">Select List</string>
    <string name="move_card">Move Card</string>
    <string name="select_card">select card</string>
    <string name="how_to_rate_this_app">How to rate this app?\n</string>
    <string name="rate_our_app">Rate out App\n</string>
    <string name="submit">submit\n</string>
    <string name="thank_you">thank you</string>
    <string name="nav_about_us">About us</string>
    <string name="nav_rate_app">Rate App</string>
    <string name="ratings_and_reviews">Ratings and reviews</string>
    <string name="_4_1">4.1</string>
    <string name="_1">1</string>
    <string name="our_office_location">Our Office Location</string>
    <string name="our_info">About Us</string>
    <string name="text_to_image">add image</string>
    <string name="add_image">add image</string>
    <string name="description">description</string>


</resources>