<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_nav_user"
            android:title="@string/nav_my_profile" />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_nav_sign_out"
            android:title="@string/nav_sign_out" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/about_us"
            android:title="@string/nav_about_us" />
        <item
            android:id="@+id/nav_rate_app"
            android:icon="@drawable/about_us"
            android:title="@string/nav_rate_app" />
        <item
            android:id="@+id/report"
            android:icon="@drawable/about_us"
            android:title="reports" />

    </group>
</menu>