<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    >


        <EditText
            android:id="@+id/editTextBoardName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/board_name"
            android:padding="20dp"
            android:background="@drawable/border_background"
            android:maxLines="1"
            android:autofillHints=""
            android:inputType="text" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/visibility"
            android:layout_below="@id/editTextBoardName"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visibility"
                    android:textSize="20sp"
                    android:layout_marginEnd="8dp"/>

                <Spinner
                    android:id="@+id/spinnerVisibility"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/visibility_options"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/visibility"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/board_background"
                    android:textSize="20sp"
                    android:layout_gravity="start"
                    android:layout_marginEnd="8dp"/>

                <ImageView
                    android:id="@+id/backgroundImage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:src="@color/colorBlue"
                    android:contentDescription="@string/todo" />
        </LinearLayout>



        <Button
            android:id="@+id/buttonCreateBoard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_board"
            android:enabled="false"
            android:layout_alignParentBottom="true"/>

</RelativeLayout>
