<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Profile Image and Review Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical">

        <!-- Profile Image -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile_user_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_user_place_holder"
            android:contentDescription="@string/image_contentDescription"
           />

        <!-- Review Content Container -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <!-- Reviewer Name -->
            <TextView
                android:id="@+id/reviewer_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_medium" />

            <!-- User Review -->
            <TextView
                android:id="@+id/User_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ratings_and_reviews"
                android:textSize="16sp"
                android:textColor="@color/dark_gray"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/roboto_regular" />

        </LinearLayout>

    </LinearLayout>

    <!-- Review Time -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/review_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timestamp"
            android:textSize="14sp"
            android:textColor="@color/light_gray"
            android:gravity="end"
            android:fontFamily="@font/roboto_regular" />

    </LinearLayout>

</LinearLayout>
