<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"

    >
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorGray"
    >

    <LinearLayout
        android:id="@+id/navigationBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_gravity="center_vertical"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/cardName"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <ImageView
            android:id="@+id/CardSetting"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_more_vert_24"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/todo" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCard"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/navigationBar"
        android:padding="16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_below="@id/recyclerViewCard"
        tools:ignore="UseCompoundDrawables">



        <TextView
            android:id="@+id/addCardBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/add_card"
            android:textColor="@color/colorBlue"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:fontFamily="monospace"
             />

        <ImageView
            android:id="@+id/addImageInCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/baseline_image_24"
            android:contentDescription="@string/todo" />

    </LinearLayout>


</RelativeLayout>
</androidx.cardview.widget.CardView>